--- a/test.ipynb
+++ b/test.ipynb
@@ -95,23 +95,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'#060505'"
+       "'#ff3300'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,20 +113,43 @@
     "import colorsys\n",
     "\n",
     "def hls_to_hex(h, l, s):\n",
+    "    h = h/360\n",
+    "    l = l/100\n",
+    "    s = s/100\n",
+    "\n",
     "    r,g,b = colorsys.hls_to_rgb(h, l, s)\n",
-    "    print()\n",
-    "    r_hex = str(hex(round(r*100)))[2:3]\n",
+    "    r_hex = str(hex(round(r*255)))[2:4]\n",
     "    if len(r_hex) == 1:\n",
     "        r_hex = \"0\" + r_hex\n",
-    "    g_hex = str(hex(round(g*100)))[2:3]\n",
+    "    g_hex = str(hex(round(g*255)))[2:4]\n",
     "    if len(g_hex) == 1:\n",
     "        g_hex = \"0\" + g_hex\n",
-    "    b_hex = str(hex(round(b*100)))[2:3]\n",
+    "    b_hex = str(hex(round(b*255)))[2:4]\n",
     "    if len(b_hex) == 1:\n",
     "        b_hex = \"0\" + b_hex\n",
     "    return f\"#{r_hex}{g_hex}{b_hex}\"\n",
     "\n",
-    "hls_to_hex(0/360,0.9,1)"
+    "hls_to_hex(12,50,100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.0, 0.2, 0.0)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "colorsys.hls_to_rgb(12/360,0.5,1)"
    ]
   },
   {
