--- a/test.ipynb
+++ b/test.ipynb
@@ -2,21 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "from geopy.geocoders import Nominatim\n",
     "from datetime import date\n",
+    "from sklearn import preprocessing\n",
     "import pandas as pd\n",
     "import requests\n",
+    "import colorsys\n",
     "import folium"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,9 +59,13 @@
     "        size = float(card.find(\"span\", {\"class\":\"css-643j0o\"}).text.split(\" - \")[0].replace(' ','').replace('m²','').replace(',','.'))\n",
     "        mprice = float(card.find(\"span\", {\"class\":\"css-643j0o\"}).text.split(\" - \")[1].replace(' ','').replace('zł/m²',''))\n",
     "        location = card.find(\"p\", {\"data-testid\":\"location-date\"}).text.split(\" - \")[0]\n",
+    "        if \"wybud\" in location:\n",
+    "            location = location.removesuffix(' Wybudowanie')\n",
+    "            location = location.removesuffix(' Wybud.')\n",
+    "\n",
     "        district = None\n",
     "        try:\n",
-    "            coords = geolocator.geocode(location)\n",
+    "            coords = geolocator.geocode(location + \", Pomorskie, Polska\")\n",
     "            lat = coords.latitude\n",
     "            lon = coords.longitude\n",
     "        except:\n",
@@ -78,40 +84,6 @@
     "\n",
     "        df.loc[len(df)] = [name,price,size,mprice,location,district,lat,lon,dateposted,negotiable]\n",
     "\n",
-    "df = pd.DataFrame(columns=['Name','Price','Size','Mprice','City','District','Lat','Lon','DatePosted','Negotiable'])\n",
-    "\n",
-    "geolocator = Nominatim(user_agent=\"my_request\")\n",
-    "\n",
-    "main(\"https://www.olx.pl/nieruchomosci/dzialki/sprzedaz/gdansk/?page=1&search%5Bdist%5D=50&search%5Bfilter_enum_type%5D%5B0%5D=dzialki-budowlane&search%5Bprivate_business%5D=private\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Add separate list for City and coordinates, to avoid repeating search and make all work faster (now it took 5m 37s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'#ff3300'"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import colorsys\n",
-    "\n",
     "def hls_to_hex(h, l, s):\n",
     "    h = h/360\n",
     "    l = l/100\n",
@@ -129,56 +101,57 @@
     "        b_hex = \"0\" + b_hex\n",
     "    return f\"#{r_hex}{g_hex}{b_hex}\"\n",
     "\n",
-    "hls_to_hex(12,50,100)"
+    "df = pd.DataFrame(columns=['Name','Price','Size','Mprice','City','District','Lat','Lon','DatePosted','Negotiable'])\n",
+    "\n",
+    "geolocator = Nominatim(user_agent=\"my_request\")\n",
+    "\n",
+    "main(\"https://www.olx.pl/nieruchomosci/dzialki/sprzedaz/gdansk/?page=1&search%5Bdist%5D=50&search%5Bfilter_enum_type%5D%5B0%5D=dzialki-budowlane&search%5Bprivate_business%5D=private\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 69,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1.0, 0.2, 0.0)"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "colorsys.hls_to_rgb(12/360,0.5,1)"
+    "Add separate list for City and coordinates, to avoid repeating search and make all work faster (1st try - 5m 37s, 2nd try - 6m 9s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "location not found for Stara Kiszewa Wybud.\n",
-      "location not found for Kłosowo Wybudowanie\n"
+      "location not found for Kłosowo Wybudowanie\n",
+      "location not found for Gdańsk\n",
+      "location not found for Stara Kiszewa Wybud.\n"
      ]
     }
    ],
    "source": [
-    "map = folium.Map(location=[54.36, 18.63],zoom_start=9)\n",
+    "map = folium.Map(location=[54.36, 18.63],zoom_start=9,tiles=\"Stamen Toner\")\n",
     "\n",
     "fg = folium.FeatureGroup(name='Działki')\n",
     "\n",
     "df['Mprice'].min()\n",
     "df['Mprice'].max()\n",
     "\n",
+    "min_max_scaler = preprocessing.MinMaxScaler()\n",
+    "X_train_minmax = min_max_scaler.fit_transform(df['Mprice'].values.reshape(-1, 1))\n",
+    "df['Mprice_n'] = X_train_minmax\n",
+    "\n",
     "for index, coordinates in df.iterrows():\n",
     "    try:\n",
-    "        fg.add_child(folium.Circle(location=[coordinates[\"Lat\"],coordinates['Lon']],popup=f\"{coordinates['City']}, {coordinates['Mprice']}\",radius=float(coordinates['Mprice']),color=))\n",
+    "        fg.add_child(folium.Circle(location=[coordinates[\"Lat\"],coordinates['Lon']],popup=f\"{coordinates['City']}, {coordinates['Mprice']}\",radius=float(coordinates['Mprice_n']*500+500),color=hls_to_hex(100-coordinates['Mprice_n']*100,50,100)))\n",
     "    except:\n",
     "        print(f\"location not found for {coordinates['City']}\")\n",
+    "\n",
+    "coords = geolocator.geocode(\"Przyjaźń\")\n",
+    "fg.add_child(folium.Circle(location=[coords.latitude,coords.longitude],popup=f\"{coords}\",radius=1000,color=\"#0000ff\"))\n",
+    "\n",
     "map.add_child(fg)\n",
     "map.save('analysis.html')"
    ]
@@ -208,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4,
   "vscode": {
